--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,12 @@ dependencies {
     implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
     implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
     implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.4.1'
+    implementation group: 'com.github.javafaker', name: 'javafaker', version: '1.0.2'
+    implementation('org.projectlombok:lombok:1.18.20')
+    annotationProcessor('org.projectlombok:lombok:1.18.20')
+    testImplementation('org.projectlombok:lombok:1.18.20')
+    testAnnotationProcessor('org.projectlombok:lombok:1.18.20')
+
 }
 
 test {
